argo-workflows/argo-deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
spec:
  template:
    spec:
      containers:
        - name: argo-server
          args:
            - server
            - "--auth-mode=client"
            - "--secure=true"
            - "--namespaced"
            - "--managed-namespace"
            - "dev"
            - "--verbose"
