argo-workflows/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/secure-backends: "true"
  name: argo-server
  namespace: argo
spec:
  rules:
    - host: wf.pauljs.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: argo-server
                port:
                  name: web
  tls:
    - hosts:
        - wf.pauljs.io
      secretName: argo-server-cert
